--- a/arch/arm64/configs/alioth_openwrt_defconfig
+++ b/arch/arm64/configs/alioth_openwrt_defconfig
@@ -320,7 +320,7 @@ CONFIG_NETFILTER_XT_MATCH_ESP=y
 CONFIG_NETFILTER_XT_MATCH_HASHLIMIT=y
 CONFIG_NETFILTER_XT_MATCH_HELPER=y
 CONFIG_NETFILTER_XT_MATCH_IPRANGE=y
-CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=
+CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=y
 CONFIG_NETFILTER_XT_MATCH_IPVS=y
 # CONFIG_NETFILTER_XT_MATCH_L2TP is not set
 CONFIG_NETFILTER_XT_MATCH_LENGTH=y
@@ -850,7 +850,7 @@ CONFIG_DEBUG_ALIGN_RODATA=y
 # Nethunter Configurations
 #
 
-IMG_GZ_DTB=y
+CONFIG_IMG_GZ_DTB=y
 
 # Bluetooth Device Drivers
 CONFIG_BT_HCIBTUSB=y
@@ -911,7 +911,7 @@ CONFIG_MEDIA_SDR_SUPPORT=y
 # Media USB Adapters
 CONFIG_USB_AIRSPY=y
 CONFIG_USB_HACKRF=y
-USB_MSI2500=y
+CONFIG_USB_MSI2500=y
 
 # USB Support
 CONFIG_USB_ACM=y
