--- a/arch/arm64/configs/alioth_openwrt_defconfig
+++ b/arch/arm64/configs/alioth_openwrt_defconfig
@@ -1,61 +1,60 @@
 CONFIG_LOCALVERSION="~OpenWrt_Alioth_v1"
 
-# OpenWrt and Docker support
-CONFIG_POSIX_MQUEUE=y
-CONFIG_POSIX_MQUEUE_SYSCTL=y
-
-CONFIG_PAGE_COUNTER=y
-CONFIG_MEMCG=y
-CONFIG_MEMCG_SWAP=y
-CONFIG_MEMCG_KMEM=y
-CONFIG_BLK_CGROUP=y
-
-CONFIG_CGROUP_WRITEBACK=y
-CONFIG_CGROUP_SCHED=y
-CONFIG_FAIR_GROUP_SCHED=y
-CONFIG_CFS_BANDWIDTH=y
-CONFIG_RT_GROUP_SCHED=y
-CONFIG_CGROUP_PIDS=y
-
-CONFIG_CGROUP_FREEZER=y
-CONFIG_CPUSETS=y
-CONFIG_PROC_PID_CPUSET=y
+# Docker
+CONFIG_NET_NS=y
+CONFIG_PID_NS=y
+CONFIG_IPC_NS=y
+CONFIG_UTS_NS=y
+CONFIG_CGROUPS=y
 CONFIG_CGROUP_DEVICE=y
-CONFIG_CGROUP_CPUACCT=y
+CONFIG_CGROUP_SCHED=y
+CONFIG_MEMCG=y
+CONFIG_KEYS=y
+CONFIG_BRIDGE_NETFILTER=y
+CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=y
+CONFIG_NETFILTER_XT_MATCH_IPVS=y
+CONFIG_NETFILTER_XT_MARK=y
+CONFIG_NF_NAT=y
+CONFIG_POSIX_MQUEUE=y
+CONFIG_NF_NAT_IPV4=y
+CONFIG_NETFILTER_ADVANCED=y
+CONFIG_NF_NAT_NEEDED=y
+CONFIG_USER_NS=y
+CONFIG_SECCOMP_FILTER=y
+CONFIG_HAVE_ARCH_SECCOMP=y
+CONFIG_HAVE_ARCH_SECCOMP_FILTER=y
+CONFIG_CGROUP_PIDS=y
+CONFIG_MEMCG_SWAP=y
+CONFIG_MEMCG_SWAP_ENABLED=y
+CONFIG_MMU=y
+CONFIG_BLOCK=y
+CONFIG_SWAP=y
+CONFIG_IOSCHED_CFQ=y
+CONFIG_BLK_DEV_THROTTLING=y
+CONFIG_EXPERT=y
 CONFIG_CGROUP_PERF=y
+CONFIG_PROFILING=y
+CONFIG_HAVE_PERF_EVENTS=y
 CONFIG_CGROUP_HUGETLB=y
+CONFIG_HUGETLB_PAGE=y
 CONFIG_NET_CLS_CGROUP=y
 CONFIG_CGROUP_NET_PRIO=y
-CONFIG_CFS_BANDWIDTH=y
-
+# CONFIG_CFS_BANDWIDTH=n
+CONFIG_FAIR_GROUP_SCHED=y
 CONFIG_IP_VS=y
 CONFIG_IP_VS_NFCT=y
 CONFIG_IP_VS_PROTO_TCP=y
 CONFIG_IP_VS_PROTO_UDP=y
 CONFIG_IP_VS_RR=y
 CONFIG_SECURITY_APPARMOR=y
-CONFIG_VLAN_8021Q=y
-CONFIG_VXLAN=y
-CONFIG_BRIDGE_VLAN_FILTERING=y
-CONFIG_IPVLAN=y
-CONFIG_MACVLAN=m
-CONFIG_NET_IPGRE=y
 
+# Networking
+CONFIG_VLAN_8021Q=y
+CONFIG_BRIDGE_VLAN_FILTERING=y
+CONFIG_MACVLAN=y
+CONFIG_NET_IPGRE=y
 CONFIG_PPP=y
 CONFIG_PPPOE=y
-
-CONFIG_SOCK_CGROUP_DATA=y
-CONFIG_NAMESPACES=y
-CONFIG_USER_NS=y
-CONFIG_PID_NS=y
-CONFIG_UTS_NS=y
-CONFIG_IPC_NS=y
-
-CONFIG_BLK_DEV_THROTTLING=y
-
-CONFIG_BRIDGE_NETFILTER=y
-
-
 
 # CONFIG_AUDIT is not set
 CONFIG_NO_HZ=y
@@ -90,7 +89,7 @@ CONFIG_MAX_BOOST_FREQ_LP=1708800
 CONFIG_MAX_BOOST_FREQ_PERF=1766400
 CONFIG_MAX_BOOST_FREQ_PRIME=1862400
 CONFIG_OPLUS_MM_HACKS=y
-CONFIG_DEFAULT_HOSTNAME="OpenWrt"
+CONFIG_DEFAULT_HOSTNAME="kali"
 CONFIG_SYSVIPC=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_XACCT=y
@@ -105,8 +104,8 @@ CONFIG_IKCONFIG_PROC=y
 # CONFIG_IKHEADERS is not set
 CONFIG_LOG_BUF_SHIFT=21
 CONFIG_LOG_CPU_MAX_BUF_SHIFT=17
-# CONFIG_MEMCG is not set
-# CONFIG_MEMCG_SWAP is not set
+
+
 CONFIG_ANDROID_SIMPLE_LMK=y
 CONFIG_BLK_CGROUP=y
 CONFIG_CGROUP_FREEZER=y
@@ -115,7 +114,7 @@ CONFIG_CGROUP_CPUACCT=y
 CONFIG_CGROUP_BPF=y
 CONFIG_SCHED_CORE_CTL=y
 CONFIG_NAMESPACES=y
-# CONFIG_PID_NS is not set
+
 CONFIG_SCHED_AUTOGROUP=y
 CONFIG_SCHED_TUNE=y
 CONFIG_BLK_DEV_INITRD=y
@@ -320,8 +319,6 @@ CONFIG_NETFILTER_XT_MATCH_ESP=y
 CONFIG_NETFILTER_XT_MATCH_HASHLIMIT=y
 CONFIG_NETFILTER_XT_MATCH_HELPER=y
 CONFIG_NETFILTER_XT_MATCH_IPRANGE=y
-CONFIG_NETFILTER_XT_MATCH_ADDRTYPE=y
-CONFIG_NETFILTER_XT_MATCH_IPVS=y
 # CONFIG_NETFILTER_XT_MATCH_L2TP is not set
 CONFIG_NETFILTER_XT_MATCH_LENGTH=y
 CONFIG_NETFILTER_XT_MATCH_LIMIT=y
