--- a/arch/arm64/configs/alioth_openwrt_defconfig
+++ b/arch/arm64/configs/alioth_openwrt_defconfig
@@ -1,4 +1,5 @@
 CONFIG_LOCALVERSION="~OpenWrt_Alioth_v1"
+CONFIG_DEFAULT_HOSTNAME="OpenWrt"                             
 
 # Docker
 CONFIG_NET_NS=y
@@ -47,6 +48,11 @@ CONFIG_IP_VS_PROTO_TCP=y
 CONFIG_IP_VS_PROTO_UDP=y
 CONFIG_IP_VS_RR=y
 CONFIG_SECURITY_APPARMOR=y
+CONFIG_PROC_PID_CPUSET=y
+CONFIG_SMP=y
+CONFIG_RT_GROUP_SCHED=y
+CONFIG_XFRM_ALGO=y
+
 
 # Networking
 CONFIG_VLAN_8021Q=y
@@ -55,6 +61,22 @@ CONFIG_MACVLAN=y
 CONFIG_NET_IPGRE=y
 CONFIG_PPP=y
 CONFIG_PPPOE=y
+CONFIG_NET_CORE=y
+CONFIG_IPV6=y                          
+CONFIG_IP6_NF_TARGET_MASQUERADE=y
+CONFIG_NETFILTER_XTABLES=y
+CONFIG_NF_NAT_MASQUERADE_IPV4=y
+CONFIG_CGROUP_NET_CLASSID=y
+CONFIG_NETFILTER_XT_TARGET_CHECKSUM=y
+CONFIG_PACKET_DIAG=y
+CONFIG_UNIX_DIAG=y
+CONFIG_IP_ROUTE_MULTIPATH=y
+CONFIG_IP_MROUTE=y
+CONFIG_INET_RAW_DIAG=y
+CONFIG_INET_DIAG=y
+CONFIG_IPV6_GRE=y
+CONFIG_IPV6_MROUTE=y                               
+
 
 # CONFIG_AUDIT is not set
 CONFIG_NO_HZ=y
@@ -89,12 +111,12 @@ CONFIG_MAX_BOOST_FREQ_LP=1708800
 CONFIG_MAX_BOOST_FREQ_PERF=1766400
 CONFIG_MAX_BOOST_FREQ_PRIME=1862400
 CONFIG_OPLUS_MM_HACKS=y
-CONFIG_DEFAULT_HOSTNAME="kali"
 CONFIG_SYSVIPC=y
 CONFIG_TASKSTATS=y
 CONFIG_TASK_XACCT=y
 CONFIG_TASK_IO_ACCOUNTING=y
-# CONFIG_SLUB_CPU_PARTIAL is not set
+CONFIG_SLUB_CPU_PARTIAL=y
+CONFIG_SLUB=y
 # CONFIG_PSI is not set
 CONFIG_RCU_EXPERT=y
 CONFIG_RCU_FAST_NO_HZ=y
